# FAscnn_pp

./: .gitignore  LICENSE  QUICK_START.md  README.md  config_1024x2048.yaml  config_512x1024.yaml  config_512x512.yaml  config_example.yaml  download_data.sh  extract_metrics.py  pyproject.toml  requirements-max.txt  requirements.txt  run_ablation.sh  run_all_ablations.sh  run_test.sh  run_train.sh  setup.sh  test_all_models.sh
checkpoints/ENet/: best.pt  last.pt
checkpoints/ENetv2/: best.pt  last.pt
checkpoints/ENetv3/: best.pt  last.pt
checkpoints/FAscnn_pp_V3/: best.pt  last.pt
praca_licencjacka/: .gitignore  PLAN_EKSPERYMENTOW.md  counts.txt
praca_licencjacka/cała_praca/: build_praca.sh  praca_licencjacka.bcf  praca_licencjacka.tex  rozdziały_1_2.tex
praca_licencjacka/notatki/: architektury_fascnn_pp_eksperymenty.md
praca_licencjacka/rozdzialy/: references.bib
praca_licencjacka/scripts/: generate_plots.py  generate_results_text.py  generate_tensorboard_assets.py  sync_results_figures.py
praca_licencjacka/sprawozdanie/: references.bib  sprawozdanie.bcf  sprawozdanie.tex
praca_licencjacka/wyniki_auto/: tensorboard_summary.csv
prezentacja/: FAscnn_pp_V34_Technical_Brief.md
results/FAscnn_pp_V18_1024x2048/: metrics.txt
results/FastSCNN_1024x2048/: metrics.txt
results/Step1_Baseline_1024x2048/: metrics.txt
results/Step2_no_attn_1024x2048/: metrics.txt
results/Step3_FastAttn_1024x2048/: metrics.txt
results/Step4_CP_1024x2048/: metrics.txt
src/: __init__.py  __main__.py
src/data/: Cityscape.py  (+5 more)
visualisation/: comparison.py  save_masks.py
(+75 files in other folders)
