[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fascnn_pp-fast-segmentation"
version = "0.1.0"
description = "FAscnn_pp Fast Segmentation models and training pipeline"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
